Bug 1029812 Make webidl Sequence and MozMap distinguishable. r=bz